# PaintBucketAlgorithms

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: ActionManager.hpp  Background.hpp  Basis.hpp  Button.hpp  Canvas.hpp  FillToop.hpp  Render.hpp  Tool.hpp  ToolManager.hpp  Vec2.hpp  Vector.hpp  VideoSettings.hpp  Widget.hpp  actionManager.h  actionManager.hpp  basis.h  basis.hpp  button.h  button.hpp  canvas.h  canvas.hpp  render.h  render.hpp  vec2.h  vec3.h  vector.h  vector.hpp  videoSettings.h  widget.h  widget.hpp
src/: ActionManager.cpp  Button.cpp  CMakeLists.txt  Canvas.cpp  FillTool.cpp  Render.cpp  Vec2.cpp  Vec3.cpp  Vector.cpp
src/ActionManager/: actionManager.cpp
src/Button/: button.cpp
src/Canvas/: canvas.cpp
src/Render/: render.cpp
src/Vec2/: vec2.cpp
src/Vec3/: vec3.cpp
src/Vector/: vector.cpp
